# pavc

./: README.md  create_parent_plots.py  harmonization.ipynb  pyproject.toml  schemas.py  standardize_pft_funcs.py
abr/: standardize_abr.ipynb
akveg/: standardize_akveg.ipynb
ava/: standardize_ava.ipynb
etc/: cavm_overlap_graphs.ipynb  macander_scatterplot_comparison.ipynb
neon/: standardize_neon.ipynb
nga/: standardize_nga.ipynb
other_scripts/R/: convert_rdata_to_csv.R
other_scripts/bash/: calc_pixelwise_median_vh.sh  mosaic_tifs_gdal.sh
other_scripts/etc/: download_s1.sh
other_scripts/fCoverRegression/: create_test06_fcover_v03_files.ipynb  northslope_pft_mapping.py  northslope_pft_mapping_func.py
other_scripts/fCoverRegression_mapping/: 01_northslope_height_mapping.py  01_northslope_pft_mapping.py  02_mosaic_tifs_gdal.sh  03_clip_to_polygon.sh  04_apply_water_bitmask.sh  05_add_tif_pyramids.sh  06_convert_to_netcdf.ipynb  06_convert_to_netcdf.py  cavm_overlap_graphs.ipynb  clip_to_polygon.py  create_binary_water_mask.py  load_tifs_into_grass.sh  macander_scatterplot_comparison.ipynb  readme.md  (+2 more)
pavc_funcs/: create_parent_plots.py  file_validation.py  file_validation_schemas.py  get_neon_phenocam.py  schemas.py  standardize_pft_funcs.py
processing/: 01_create_survey_unit_info.ipynb  02_create_pft_fcover.ipynb  03_create_pft_checklist.ipynb  04_create_species_fcover.ipynb  standardize_abr.ipynb  standardize_akveg.ipynb  standardize_ava.ipynb  standardize_neon.ipynb  standardize_nga.ipynb  standardize_rava.ipynb
rava/: standardize_rava.ipynb
