[project]
name = "alaska-pft-fcover-harmonization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal==3.4.*",
    "mpi4py>=4.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "rioxarray>=0.20.0",
    "scikit-learn==1.6.1",
    "xarray>=2025.10.1",
]
